@@ -9,7 +9,7 @@ public class Arrays {
         int len = a_old.length;
         Integer[] a_new = new Integer[len];
         for (int i = 0; i < len; i++) {
-            a_new[i] = new Integer(a_old[i]); // valid
+            a_new[i] = Integer.valueOf(a_old[i]); // valid
         }
         return a_new;
     }
