@@ -33,7 +33,7 @@ class B {
 
     void call() {
         Integer[] arg = new Integer[] {1, 2, 3, 4};
-        indexOf1(arg, new Integer(5));
+        indexOf1(arg, Integer.valueOf(5));
         // indexOf2(arg, new Integer(5));
     }
 }
